[gd_scene load_steps=10 format=2]

[ext_resource path="res://Source/Levels/globalLevel.gd" type="Script" id=1]
[ext_resource path="res://Source/Actors/goal.tscn" type="PackedScene" id=2]
[ext_resource path="res://Character models/World/Tilemap/tileset.tres" type="TileSet" id=3]
[ext_resource path="res://Character models/Menues/Fonts/tourmaline/Tourmaline-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Source/Actors/square.tscn" type="PackedScene" id=5]
[ext_resource path="res://Character models/Menues/Fonts/tourmaline/Tourmaline-Evolution.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Character models/Menues/Fonts/background_text.tres" type="DynamicFont" id=7]

[sub_resource type="DynamicFont" id=1]
size = 90
outline_size = 3
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 90
outline_size = 3
font_data = ExtResource( 4 )

[node name="tutorial" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 1581, -272 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 1179532, 0, 0, 1179533, 0, 0, 1179534, 0, 0, 1179535, 0, 0, 1179536, 0, 0, 1179537, 0, 0, 1179538, 0, 0, 1179539, 0, 0, 1179540, 0, 0, 1179541, 0, 0, 1179542, 0, 0, 1179543, 0, 0, 1179544, 0, 0, 1179545, 0, 0, 1179546, 0, 0, 1179547, 0, 0, 1179548, 0, 0, 1179549, 0, 0, 1179550, 0, 0, 1179551, 0, 0, 1179552, 0, 0, 1179553, 0, 0, 1179554, 0, 0, 1179555, 0, 0, 1179556, 0, 0, 1179557, 0, 0, 1179558, 0, 0, 1179559, 0, 0, 1179560, 0, 0, 1179561, 0, 0, 1179562, 0, 0, 1179563, 0, 0, 1179564, 0, 0, 1179565, 0, 0, 1179566, 0, 0, 1179567, 0, 0, 1179568, 0, 0, 1179569, 0, 0, 1179570, 0, 0, 1179571, 0, 0, 1179572, 0, 0, 1179573, 0, 0, 1179574, 0, 0, 1179575, 0, 0, 1179576, 0, 0, 1179577, 0, 0, 1179578, 0, 0, 1179579, 0, 0, 1179580, 0, 0, 1179581, 0, 0, 1179582, 0, 0, 1179583, 0, 0, 1179584, 0, 0, 1179585, 0, 0, 1179586, 0, 0, 1179587, 0, 0, 1179588, 0, 0, 1179589, 0, 0, 1179590, 0, 0, 1179591, 0, 0, 1179592, 0, 0, 1179593, 0, 0, 1179594, 0, 0, 1179595, 0, 0, 1179596, 0, 0, 1179597, 0, 0, 1179598, 0, 0, 1179599, 0, 0, 1179600, 0, 0, 1179601, 0, 0, 1179602, 0, 0, 1179603, 0, 0, 1179604, 0, 0, 1179605, 0, 0, 1179606, 0, 0, 1179607, 0, 0, 1179608, 0, 0, 1179609, 0, 0, 1179610, 0, 0, 1179611, 0, 0, 1179612, 0, 0, 1179613, 0, 0, 1179614, 0, 0, 1179615, 0, 0, 1179616, 0, 0, 1179617, 0, 0, 1179618, 0, 0, 1179619, 0, 0, 1179620, 0, 0, 1179621, 0, 0, 1179622, 0, 0, 1179623, 0, 0, 1179624, 0, 0, 1179625, 0, 0, 1179626, 0, 0, 1179627, 0, 0, 1179628, 0, 0, 1179629, 0, 0, 1179630, 0, 0, 1179631, 0, 0, 1179632, 0, 0, 1179633, 0, 0, 1179634, 0, 0, 1179635, 0, 0, 1179636, 0, 0, 1179637, 0, 0, 1179638, 0, 0, 1179639, 0, 0, 1179640, 0, 0, 1179641, 0, 0, 1179642, 0, 0, 1179643, 0, 0, 1179644, 0, 0, 1179645, 0, 0, 1179646, 0, 0, 1179647, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1114144, 0, 0, 1114145, 0, 0, 1114146, 0, 0, 1114147, 0, 0, 1114148, 0, 0, 1114149, 0, 0, 1114150, 0, 0, 1114151, 0, 0, 1114152, 0, 0, 1114153, 0, 0, 1114154, 0, 0, 1114155, 0, 0, 1114156, 0, 0, 1114157, 0, 0, 1114158, 0, 0, 1114159, 0, 0, 1114160, 0, 0, 1114161, 0, 0, 1114162, 0, 0, 1114163, 0, 0, 1114164, 0, 0, 1114165, 0, 0, 1114166, 0, 0, 1114167, 0, 0, 1114168, 0, 0, 1114169, 0, 0, 1114170, 0, 0, 1114171, 0, 0, 1114172, 0, 0, 1114173, 0, 0, 1114174, 0, 0, 1114175, 0, 0, 1114176, 0, 0, 1114177, 0, 0, 1114178, 0, 0, 1114179, 0, 0, 1114180, 0, 0, 1114181, 0, 0, 1114182, 0, 0, 1114183, 0, 0, 1114184, 0, 0, 1114185, 0, 0, 1114186, 0, 0, 1114187, 0, 0, 1114188, 0, 0, 1114189, 0, 0, 1114190, 0, 0, 1114191, 0, 0, 1114192, 0, 0, 1114193, 0, 0, 1114194, 0, 0, 1114195, 0, 0, 1114196, 0, 0, 1114197, 0, 0, 1114198, 0, 0, 1114199, 0, 0, 1114200, 0, 0, 1114201, 0, 0, 1114202, 0, 0, 1114203, 0, 0, 1114204, 0, 0, 1114205, 0, 0, 1114206, 0, 0, 1114207, 0, 0, 1114208, 0, 0, 1114209, 0, 0, 1114210, 0, 0, 1114211, 0, 0, 1114212, 0, 0, 1114213, 0, 0, 1114214, 0, 0, 1114215, 0, 0, 1114216, 0, 0, 1114217, 0, 0, 1114218, 0, 0, 1114219, 0, 0, 1114220, 0, 0, 1114221, 0, 0, 1114222, 0, 0, 1114223, 0, 0, 1114224, 0, 0, 1114225, 0, 0, 1114226, 0, 0, 1114227, 0, 0, 1114228, 0, 0, 1114229, 0, 0, 1114230, 0, 0, 1114231, 0, 0, 1114232, 0, 0, 1114233, 0, 0, 1114234, 0, 0, 1114235, 0, 0, 1114236, 0, 0, 1114237, 0, 0, 1114238, 0, 0, 1114239, 0, 0, 1114240, 0, 0, 1114241, 0, 0, 1114242, 0, 0, 1114243, 0, 0, 1114244, 0, 0, 1114245, 0, 0, 1114246, 0, 0, 1114247, 0, 0, 1114248, 0, 0, 1114249, 0, 0, 1114250, 0, 0, 1114251, 0, 0, 1114252, 0, 0, 1114253, 0, 0, 1114254, 0, 0, 1114255, 0, 0, 1114256, 0, 0, 1114257, 0, 0, 1114258, 0, 0, 1114259, 0, 0, 1114260, 0, 0, 1114261, 0, 0, 1114262, 0, 0, 1114263, 0, 0, 1114264, 0, 0, 1114265, 0, 0, 1114266, 0, 0, 1114267, 0, 0, 1114268, 0, 0, 1114269, 0, 0, 1114270, 0, 0, 1114271, 0, 0, 1114272, 0, 0, 1114273, 0, 0, 1114274, 0, 0, 1114275, 0, 0, 1114276, 0, 0, 1114277, 0, 0, 1114278, 0, 0, 1114279, 0, 0, 1114280, 0, 0, 1114281, 0, 0, 1114282, 0, 0, 1114283, 0, 0, 1114284, 0, 0, 1114285, 0, 0, 1114286, 0, 0, 1114287, 0, 0, 1114288, 0, 0, 1114289, 0, 0, 1114290, 0, 0, 1114291, 0, 0, 1114292, 0, 0, 1114293, 0, 0, 1114294, 0, 0, 1114295, 0, 0, 1114296, 0, 0, 1114297, 0, 0, 1114298, 0, 0, 1114299, 0, 0, 1114300, 0, 0, 1114301, 0, 0, 1114302, 0, 0, 1114303, 0, 0, 1114304, 0, 0, 1114305, 0, 0, 1114306, 0, 0, 1114307, 0, 0, 1114308, 0, 0, 1114309, 0, 0, 1114310, 0, 0, 1114311, 0, 0, 1114312, 0, 0, 1114313, 0, 0, 1114314, 0, 0, 1114315, 0, 0, 1114316, 0, 0, 1114317, 0, 0, 1114318, 0, 0, 1114319, 0, 0, 1114320, 0, 0, 1114321, 0, 0, 1114322, 0, 0, 1114323, 0, 0, 1114324, 0, 0, 1114325, 0, 0, 1114326, 0, 0, 1114327, 0, 0, 1114328, 0, 0, 1114329, 0, 0, 1114330, 0, 0, 1114331, 0, 0, 1114332, 0, 0, 1114333, 0, 0, 1114334, 0, 0, 1114335, 0, 0, 1114336, 0, 0, 1114337, 0, 0, 1114338, 0, 0, 1114339, 0, 0, 1114340, 0, 0, 1114341, 0, 0, 1114342, 0, 0, 1114343, 0, 0, 1114344, 0, 0, 1114345, 0, 0, 1114346, 0, 0, 1114347, 0, 0, 1114348, 0, 0, 1114349, 0, 0, 1114350, 0, 0, 1114351, 0, 0, 1114352, 0, 0, 1114353, 0, 0, 1114354, 0, 0, 1114355, 0, 0, 1114356, 0, 0, 1114357, 0, 0, 1114358, 0, 0, 1114359, 0, 0, 1114360, 0, 0, 1114361, 0, 0, 1114362, 0, 0, 1114363, 0, 0, 1114364, 0, 0, 1114365, 0, 0, 1114366, 0, 0, 1114367, 0, 0, 1114368, 0, 0, 1114369, 0, 0, 1114370, 0, 0, 1114371, 0, 0, 1114372, 0, 0, 1114373, 0, 0, 1114374, 0, 0, 1114375, 0, 0, 1114376, 0, 0, 1114377, 0, 0, 1114378, 0, 0, 1114379, 0, 0, 1114380, 0, 0, 1114381, 0, 0, 1114382, 0, 0, 1114383, 0, 0, 1114384, 0, 0, 1114385, 0, 0, 1114386, 0, 0, 1114387, 0, 0, 1114388, 0, 0, 1114389, 0, 0, 1114390, 0, 0, 1114391, 0, 0, 1114392, 0, 0, 1114393, 0, 0, 1114394, 0, 0, 1114395, 0, 0, 1114396, 0, 0, 1114397, 0, 0, 1114398, 0, 0, 1114399, 0, 0, 1114400, 0, 0, 1114401, 0, 0, 1114402, 0, 0, 1114403, 0, 0, 1114404, 0, 0, 1114405, 0, 0, 1114406, 0, 0, 1114407, 0, 0, 1114408, 0, 0, 1114409, 0, 0, 1114410, 0, 0, 1114411, 0, 0, 1114412, 0, 0, 1114413, 0, 0, 1114414, 0, 0, 1114415, 0, 0, 1114416, 0, 0, 1114417, 0, 0, 1114418, 0, 0, 1114419, 0, 0, 1114420, 0, 0, 1114421, 0, 0, 1114422, 0, 0, 1114423, 0, 0, 1114424, 0, 0, 1114425, 0, 0, 1114426, 0, 0, 1114427, 0, 0, 1114428, 0, 0, 1114429, 0, 0, 1114430, 0, 0, 1114431, 0, 0, 1114432, 0, 0, 1114433, 0, 0, 1114434, 0, 0, 1114435, 0, 0, 1114436, 0, 0, 1114437, 0, 0, 1114438, 0, 0, 1114439, 0, 0, 1114440, 0, 0, 1114441, 0, 0, 1114442, 0, 0, 1114443, 0, 0, 1114444, 0, 0, 1114445, 0, 0, 1114446, 0, 0, 1114447, 0, 0, 1114448, 0, 0, 1114449, 0, 0, 1114450, 0, 0, 1114451, 0, 0, 1114452, 0, 0, 1114453, 0, 0, 1114454, 0, 0, 1114455, 0, 0, 1114456, 0, 0, 1114457, 0, 0, 1114458, 0, 0, 1114459, 0, 0, 1114460, 0, 0, 1114461, 0, 0, 1114462, 0, 0, 1114463, 0, 0, 1114464, 0, 0, 1114465, 0, 0, 1114466, 0, 0, 1114467, 0, 0, 1114468, 0, 0, 1114469, 0, 0, 1114470, 0, 0, 1114471, 0, 0, 1114472, 0, 0, 1114473, 0, 0, 1114474, 0, 0, 1114475, 0, 0, 1114476, 0, 0, 1114477, 0, 0, 1114478, 0, 0, 1114479, 0, 0, 1114480, 0, 0, 1114481, 0, 0, 1114482, 0, 0, 1114483, 0, 0, 1114484, 0, 0, 1114485, 0, 0, 1114486, 0, 0, 1114487, 0, 0, 1114488, 0, 0, 1114489, 0, 0, 1114490, 0, 0, 1114491, 0, 0, 1114492, 0, 0, 1114493, 0, 0, 1114494, 0, 0, 1114495, 0, 0, 1114496, 0, 0, 1114497, 0, 0, 1114498, 0, 0, 1114499, 0, 0, 1114500, 0, 0, 1114501, 0, 0, 1114502, 0, 0, 1114503, 0, 0, 1114504, 0, 0, 1114505, 0, 0, 1114506, 0, 0, 1114507, 0, 0, 1114508, 0, 0, 1114509, 0, 0, 1114510, 0, 0, 1114511, 0, 0, 1114512, 0, 0, 1114513, 0, 0, 1114514, 0, 0, 1114515, 0, 0, 1114516, 0, 0, 1114517, 0, 0, 1114518, 0, 0, 1114519, 0, 0, 1114520, 0, 0, 1114521, 0, 0, 1114522, 0, 0, 1114523, 0, 0, 1114524, 0, 0, 1114525, 0, 0, 1114526, 0, 0, 1114527, 0, 0, 1114528, 0, 0, 1114529, 0, 0, 1114530, 0, 0, 1114531, 0, 0, 1114532, 0, 0, 1114533, 0, 0, 1114534, 0, 0, 1114535, 0, 0, 1114536, 0, 0, 1114537, 0, 0, 1114538, 0, 0, 1114539, 0, 0, 1114540, 0, 0, 1114541, 0, 0, 1114542, 0, 0, 1114543, 0, 0, 1114544, 0, 0, 1114545, 0, 0, 1114546, 0, 0, 1114547, 0, 0, 1114548, 0, 0, 1114549, 0, 0, 1114550, 0, 0, 1114551, 0, 0, 1114552, 0, 0, 1114553, 0, 0, 1114554, 0, 0, 1114555, 0, 0, 1114556, 0, 0, 1114557, 0, 0, 1114558, 0, 0, 1114559, 0, 0, 1114560, 0, 0, 1114561, 0, 0, 1114562, 0, 0, 1114563, 0, 0, 1114564, 0, 0, 1114565, 0, 0, 1114566, 0, 0, 1114567, 0, 0, 1114568, 0, 0, 1114569, 0, 0, 1114570, 0, 0, 1114571, 0, 0, 1114572, 0, 0, 1114573, 0, 0, 1114574, 0, 0, 1114575, 0, 0, 1114576, 0, 0, 1114577, 0, 0, 1114578, 0, 0, 1114579, 0, 0, 1114580, 0, 0, 1114581, 0, 0, 1114582, 0, 0, 1114583, 0, 0, 1114584, 0, 0, 1114585, 0, 0, 1114586, 0, 0, 1114587, 0, 0, 1114588, 0, 0, 1114589, 0, 0, 1114590, 0, 0, 1114591, 0, 0, 1114592, 0, 0, 1114593, 0, 0, 1114594, 0, 0, 1114595, 0, 0, 1114596, 0, 0, 1114597, 0, 0, 1114598, 0, 0, 1114599, 0, 0, 1114600, 0, 0, 1114601, 0, 0, 1114602, 0, 0, 1114603, 0, 0, 1114604, 0, 0, 1114605, 0, 0, 1114606, 0, 0, 1114607, 0, 0, 1114608, 0, 0, 1114609, 0, 0, 1114610, 0, 0, 1114611, 0, 0, 1114612, 0, 0, 1114613, 0, 0, 1114614, 0, 0, 1114615, 0, 0, 1114616, 0, 0, 1114617, 0, 0, 1114618, 0, 0, 1114619, 0, 0, 1114620, 0, 0, 1114621, 0, 0, 1114622, 0, 0, 1114623, 0, 0, 1114624, 0, 0, 1114625, 0, 0, 1114626, 0, 0, 1114627, 0, 0, 1114628, 0, 0, 1114629, 0, 0, 1114630, 0, 0, 1114631, 0, 0, 1114632, 0, 0, 1114633, 0, 0, 1114634, 0, 0, 1114635, 0, 0, 1114636, 0, 0, 1114637, 0, 0, 1114638, 0, 0, 1114639, 0, 0, 1114640, 0, 0, 1114641, 0, 0, 1114642, 0, 0, 1114643, 0, 0, 1114644, 0, 0, 1114645, 0, 0, 1114646, 0, 0, 1114647, 0, 0, 1114648, 0, 0, 1114649, 0, 0, 1114650, 0, 0, 1114651, 0, 0, 1114652, 0, 0, 1114653, 0, 0, 1114654, 0, 0, 1114655, 0, 0, 1114656, 0, 0, 1114657, 0, 0, 1114658, 0, 0, 1114659, 0, 0, 1114660, 0, 0, 1114661, 0, 0, 1114662, 0, 0, 1114663, 0, 0, 1114664, 0, 0, 1114665, 0, 0, 1114666, 0, 0, 1114667, 0, 0, 1114668, 0, 0, 1114669, 0, 0, 1114670, 0, 0, 1114671, 0, 0, 1114672, 0, 0, 1114673, 0, 0, 1114674, 0, 0, 1114675, 0, 0, 1114676, 0, 0, 1114677, 0, 0, 1114678, 0, 0, 1114679, 0, 0, 1114680, 0, 0, 1114681, 0, 0, 1114682, 0, 0, 1114683, 0, 0, 1114684, 0, 0, 1114685, 0, 0, 1114686, 0, 0, 1114687, 0, 0, 1114688, 0, 0, 1114689, 0, 0, 1114690, 0, 0, 1114691, 0, 0, 1114692, 0, 0, 1114693, 0, 0, 1114694, 0, 0, 1114695, 0, 0, 1114696, 0, 0, 1114697, 0, 0, 1114698, 0, 0, 1114699, 0, 0, 1114700, 0, 0, 1114701, 0, 0, 1114702, 0, 0, 1114703, 0, 0, 1114704, 0, 0, 1114705, 0, 0, 1114706, 0, 0, 1114707, 0, 0, 1114708, 0, 0, 1114709, 0, 0, 1114710, 0, 0, 1114711, 0, 0, 1114712, 0, 0, 1114713, 0, 0, 1114714, 0, 0, 1114715, 0, 0, 1114716, 0, 0, 1114717, 0, 0, 1114718, 0, 0, 1114719, 0, 0, 1114720, 0, 0, 1114721, 0, 0, 1114722, 0, 0, 1114723, 0, 0, 1114724, 0, 0, 1114725, 0, 0, 1114726, 0, 0, 1114727, 0, 0, 1114728, 0, 0, 1114729, 0, 0, 1114730, 0, 0, 1114731, 0, 0, 1114732, 0, 0, 1114733, 0, 0, 1114734, 0, 0, 1114735, 0, 0, 1114736, 0, 0, 1114737, 0, 0, 1114738, 0, 0, 1114739, 0, 0, 1114740, 0, 0, 1114741, 0, 0, 1114742, 0, 0, 1114743, 0, 0, 1114744, 0, 0, 1114745, 0, 0, 1114746, 0, 0, 1114747, 0, 0, 1114748, 0, 0, 1114749, 0, 0, 1114750, 0, 0, 1114751, 0, 0, 1114752, 0, 0, 1114753, 0, 0, 1114754, 0, 0, 1114755, 0, 0, 1114756, 0, 0, 1114757, 0, 0, 1114758, 0, 0, 1114759, 0, 0, 1114760, 0, 0, 1114761, 0, 0, 1114762, 0, 0, 1114763, 0, 0, 1114764, 0, 0, 1114765, 0, 0, 1114766, 0, 0, 1114767, 0, 0, 1114768, 0, 0, 1114769, 0, 0, 1114770, 0, 0, 1114771, 0, 0, 1114772, 0, 0, 1114773, 0, 0, 1114774, 0, 0, 1114775, 0, 0, 1114776, 0, 0, 1114777, 0, 0, 1114778, 0, 0, 1114779, 0, 0, 1114780, 0, 0, 1114781, 0, 0, 1114782, 0, 0, 1114783, 0, 0, 1114784, 0, 0, 1114785, 0, 0, 1114786, 0, 0, 1114787, 0, 0, 1114788, 0, 0, 1114789, 0, 0, 1114790, 0, 0, 1114791, 0, 0, 1114792, 0, 0, 1114793, 0, 0, 1114794, 0, 0, 1114795, 0, 0, 1114796, 0, 0, 1114797, 0, 0, 1114798, 0, 0, 1114799, 0, 0, 1114800, 0, 0, 1114801, 0, 0, 1114802, 0, 0, 1114803, 0, 0, 1114804, 0, 0, 1114805, 0, 0, 1114806, 0, 0, 1114807, 0, 0, 1114808, 0, 0, 1114809, 0, 0, 1114810, 0, 0, 1114811, 0, 0, 1114812, 0, 0, 1114813, 0, 0, 1114814, 0, 0, 1114815, 0, 0, 1114816, 0, 0, 1114817, 0, 0, 1114818, 0, 0, 1114819, 0, 0, 1114820, 0, 0, 1114821, 0, 0, 1114822, 0, 0, 1114823, 0, 0, 1114824, 0, 0, 1114825, 0, 0, 1114826, 0, 0, 1114827, 0, 0, 1114828, 0, 0, 1114829, 0, 0, 1114830, 0, 0, 1114831, 0, 0, 1114832, 0, 0, 1114833, 0, 0, 1114834, 0, 0, 1114835, 0, 0, 1114836, 0, 0, 1114837, 0, 0, 1114838, 0, 0, 1114839, 0, 0, 1114840, 0, 0, 1114841, 0, 0, 1114842, 0, 0, 1114843, 0, 0, 1114844, 0, 0, 1114845, 0, 0, 1114846, 0, 0, 1114847, 0, 0, 1114848, 0, 0, 1114849, 0, 0, 1114850, 0, 0, 1114851, 0, 0, 1114852, 0, 0, 1114853, 0, 0, 1114854, 0, 0, 1114855, 0, 0, 1114856, 0, 0, 1114857, 0, 0, 1114858, 0, 0, 1114859, 0, 0, 1114860, 0, 0, 1114861, 0, 0, 1114862, 0, 0, 1114863, 0, 0, 1114864, 0, 0, 1114865, 0, 0, 1114866, 0, 0, 1114867, 0, 0, 1114868, 0, 0, 1114869, 0, 0, 1114870, 0, 0, 1114871, 0, 0, 1114872, 0, 0, 1114873, 0, 0, 1114874, 0, 0, 1114875, 0, 0, 1114876, 0, 0, 1114877, 0, 0, 1114878, 0, 0, 1114879, 0, 0, 1114880, 0, 0, 1114881, 0, 0, 1114882, 0, 0, 1114883, 0, 0, 1114884, 0, 0, 1114885, 0, 0, 1114886, 0, 0, 1114887, 0, 0, 1114888, 0, 0, 1114889, 0, 0, 1114890, 0, 0, 1114891, 0, 0, 1114892, 0, 0, 1114893, 0, 0, 1114894, 0, 0, 1114895, 0, 0, 1114896, 0, 0, 1114897, 0, 0, 1114898, 0, 0, 1114899, 0, 0, 1114900, 0, 0, 1114901, 0, 0, 1114902, 0, 0 )

[node name="normal_tutorial" type="Node2D" parent="."]

[node name="intro" type="Label" parent="normal_tutorial"]
margin_left = 1000.0
margin_top = -350.0
margin_right = 2262.0
margin_bottom = -161.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "in this game, you can't 
jump, you're                 !"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="intro2" type="Label" parent="normal_tutorial"]
margin_left = 1665.0
margin_top = -254.0
margin_right = 2226.0
margin_bottom = -161.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "paralyzed"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jump" type="Label" parent="normal_tutorial"]
margin_left = 3250.0
margin_top = -446.0
margin_right = 3506.0
margin_bottom = -353.0
custom_fonts/font = ExtResource( 7 )
text = "press"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jump_input" type="Label" parent="normal_tutorial"]
margin_left = 3535.0
margin_top = -446.0
margin_right = 3821.0
margin_bottom = -353.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "ERROR"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jump_rest" type="Label" parent="normal_tutorial"]
margin_left = 3175.0
margin_top = -350.0
margin_right = 3916.0
margin_bottom = -161.0
custom_fonts/font = ExtResource( 7 )
text = "to make enemy
squares jump"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="become_red" type="Label" parent="normal_tutorial"]
margin_left = 4573.0
margin_top = -350.0
margin_right = 5309.0
margin_bottom = -161.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.933333, 0.266667, 0.184314, 1 )
text = "press ERROR to
become red"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jump2" type="Label" parent="normal_tutorial"]
margin_left = 5735.0
margin_top = -349.0
margin_right = 5991.0
margin_bottom = -256.0
custom_fonts/font = ExtResource( 7 )
text = "press"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jump2_input" type="Label" parent="normal_tutorial"]
margin_left = 6012.0
margin_top = -349.0
margin_right = 6298.0
margin_bottom = -256.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "ERROR"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jump2_again" type="Label" parent="normal_tutorial"]
margin_left = 5864.0
margin_top = -253.0
margin_right = 6160.0
margin_bottom = -160.0
custom_fonts/font = ExtResource( 7 )
text = "again"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cyan" type="Label" parent="normal_tutorial"]
margin_left = 7100.0
margin_top = -254.0
margin_right = 7152.0
margin_bottom = -161.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.388235, 0.67451, 0.745098, 1 )
text = "?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cyan2" type="Label" parent="normal_tutorial"]
margin_left = 7000.0
margin_top = -350.0
margin_right = 7265.0
margin_bottom = -257.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.388235, 0.67451, 0.745098, 1 )
text = "cyan"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="red" type="Label" parent="normal_tutorial"]
margin_left = 7350.0
margin_top = -254.0
margin_right = 7402.0
margin_bottom = -161.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.933333, 0.266667, 0.184314, 1 )
text = "?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="red2" type="Label" parent="normal_tutorial"]
margin_left = 7310.0
margin_top = -350.0
margin_right = 7479.0
margin_bottom = -257.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.933333, 0.266667, 0.184314, 1 )
text = "red"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="purple" type="Label" parent="normal_tutorial"]
margin_left = 7650.0
margin_top = -254.0
margin_right = 7702.0
margin_bottom = -161.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.376471, 0.101961, 0.290196, 1 )
text = "?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="purple2" type="Label" parent="normal_tutorial"]
margin_left = 7520.0
margin_top = -350.0
margin_right = 7843.0
margin_bottom = -257.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.376471, 0.101961, 0.290196, 1 )
text = "purple"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yellow" type="Label" parent="normal_tutorial"]
margin_left = 8030.0
margin_top = -254.0
margin_right = 8082.0
margin_bottom = -161.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 0.909804, 0.160784, 1 )
text = "?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yellow2" type="Label" parent="normal_tutorial"]
margin_left = 7880.0
margin_top = -350.0
margin_right = 8240.0
margin_bottom = -257.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 0.909804, 0.160784, 1 )
text = "yellow"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause" type="Label" parent="normal_tutorial"]
margin_left = 9513.0
margin_top = -350.0
margin_right = 9769.0
margin_bottom = -257.0
custom_fonts/font = ExtResource( 7 )
text = "press"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_input" type="Label" parent="normal_tutorial"]
margin_left = 9790.0
margin_top = -350.0
margin_right = 10122.0
margin_bottom = -257.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "ERROR"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause3" type="Label" parent="normal_tutorial"]
margin_left = 9604.0
margin_top = -254.0
margin_right = 10045.0
margin_bottom = -161.0
custom_fonts/font = ExtResource( 7 )
text = "to pause"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ending" type="Label" parent="normal_tutorial"]
margin_left = 11000.0
margin_top = -446.0
margin_right = 11970.0
margin_bottom = -161.0
custom_fonts/font = ExtResource( 7 )
text = "you have to be the
same color as the
enemies, good luck!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="practice_tutorial" type="Node2D" parent="."]
visible = false

[node name="intro" type="Label" parent="practice_tutorial"]
margin_left = 1000.0
margin_top = -350.0
margin_right = 1725.0
margin_bottom = -161.0
custom_fonts/font = ExtResource( 7 )
text = "welcome to
practice mode"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="intro2" type="Label" parent="practice_tutorial"]
margin_left = 3709.0
margin_top = -350.0
margin_right = 4957.0
margin_bottom = -161.0
custom_fonts/font = ExtResource( 7 )
text = "if you die, you respawn
at the most recent flag"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flag" type="Label" parent="practice_tutorial"]
margin_left = 2559.0
margin_top = -350.0
margin_right = 2815.0
margin_bottom = -257.0
custom_fonts/font = ExtResource( 7 )
text = "press"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flag_input" type="Label" parent="practice_tutorial"]
margin_left = 2836.0
margin_top = -350.0
margin_right = 2888.0
margin_bottom = -257.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flag_rest" type="Label" parent="practice_tutorial"]
margin_left = 2370.0
margin_top = -254.0
margin_right = 3082.0
margin_bottom = -161.0
custom_fonts/font = ExtResource( 7 )
text = "to place flag"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="remove" type="Label" parent="practice_tutorial"]
margin_left = 6008.0
margin_top = -445.0
margin_right = 6264.0
margin_bottom = -352.0
custom_fonts/font = ExtResource( 7 )
text = "press"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="remove_input" type="Label" parent="practice_tutorial"]
margin_left = 6291.0
margin_top = -445.0
margin_right = 6338.0
margin_bottom = -352.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="remove_rest" type="Label" parent="practice_tutorial"]
margin_left = 5732.0
margin_top = -349.0
margin_right = 6613.0
margin_bottom = -160.0
custom_fonts/font = ExtResource( 7 )
text = "to delete the
most recent flag"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sd" type="Label" parent="practice_tutorial"]
margin_left = 7531.0
margin_top = -446.0
margin_right = 8673.0
margin_bottom = -161.0
custom_fonts/font = ExtResource( 7 )
text = "if you get stuck,
you can self destruct
by pressing"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sd_input" type="Label" parent="practice_tutorial"]
margin_left = 8411.0
margin_top = -254.0
margin_right = 8463.0
margin_bottom = -161.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rebound" type="Label" parent="practice_tutorial"]
margin_left = 9426.0
margin_top = -446.0
margin_right = 10441.0
margin_bottom = -161.0
custom_fonts/font = ExtResource( 7 )
text = "all keybindings can
be rebound in the
settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="note" type="Label" parent="practice_tutorial"]
margin_left = 11066.0
margin_top = -446.0
margin_right = 12253.0
margin_bottom = -161.0
custom_fonts/font = ExtResource( 7 )
text = "note: You don't unlock
new levels by beating
practice mode"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="square2" parent="." instance=ExtResource( 5 )]
position = Vector2( 6009, 0 )
COLOR = "red"

[node name="square3" parent="." instance=ExtResource( 5 )]
position = Vector2( 8822, 0 )
COLOR = "yellow"

[node name="square" parent="." instance=ExtResource( 5 )]
position = Vector2( 3527, 0 )

[node name="goal" parent="." instance=ExtResource( 2 )]
position = Vector2( 12587, 0 )
